loretta adds a sitemap

--- a/index.html
+++ b/index.html
@@ -297,7 +297,10 @@
 
       </section>
 
-
+    <section>
+       <h2>sitemap</h2>
+       <img src="img/sitemap.png" alt="sitemap.png">
+    </section>
     </section>
     <!-- // COMBINED ELEMENTS SECTION -->
 
