--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -35,6 +35,101 @@
           <a class="nav-main" href="#">Contact Us</a>
       </div>
     </section>
+    <div id="banner">
+      <img src="img/banner.jpg" alt="banner">
+    </div>
+    <section>
+    <div id="topsales">
+      <h2>Monthly Top 3 Sales</h2>
+      <div class="box">
+        <div id="sales1">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales2">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales3">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+      </div>
+      </section>
+    <section>
+      <div id="hotlisting">
+        <h2>Hot Listing</h2>
+        <div class="box">
+          <div id="listing1">
+            <figure>
+              <img src="img/listing.png" alt="listing">
+              <figcaption>Property info</figcaption>
+            </figure>
+          </div>
+
+          <div id="listing2">
+            <figure>
+              <img src="img/listing.png" alt="listing">
+              <figcaption>Property info</figcaption>
+            </figure>
+          </div>
+
+          <div id="listing3">
+            <figure>
+              <img src="img/listing.png" alt="listing">
+              <figcaption>Property info</figcaption>
+            </figure>
+          </div>
+
+          <div id="listing4">
+            <figure>
+              <img src="img/listing.png" alt="listing">
+              <figcaption>Property info</figcaption>
+            </figure>
+          </div>
+
+          <div id="listing5">
+            <figure>
+              <img src="img/listing.png" alt="listing">
+              <figcaption>Property info</figcaption>
+            </figure>
+          </div>
+
+          <div id="listing6">
+            <figure>
+              <img src="img/listing.png" alt="listing">
+              <figcaption>Property info</figcaption>
+            </figure>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+     <div class="footer">
+        <div id="footer-info">
+         <h4>Company Information</h4>
+         <p>balabalalbala</p>
+         <p>balabalalbala</p>
+        </div>
+        <div id="qr" >
+         <img src="img/logo.png" alt="qrcode">
+        </div>
+      </div>
+      <div id="cr">copyringt info</div>
+
+        
+        
+
 
   </body>
 </html>
