Loretta add other pages

--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -28,11 +28,25 @@
     </section>
     <section>
       <div>
-          <a class="nav-main" href="#">Home</a>
-          <a class="nav-main" href="#">About Us</a>
-          <a class="nav-main" href="#">Sales Team</a>
-          <a class="nav-main" href="#">Find A Realty</a>
-          <a class="nav-main" href="#">Contact Us</a>
+          <a class="nav-main" href="home.html">Home</a>
+          <div class="nav-main" id="about">
+            <i class="dropbtn">About Us</i>
+            <div class="dropdown-content" id="aboutsub">
+              <a href="aboutCompany.html">About Company</a>
+              <a href="officialStatement.html">Official Statement</a>
+            </div>
+          </div> 
+          <a class="nav-main" href="salesTeam.html">Sales Team</a>
+          <div class="nav-main" id="find">
+            <i class="dropbtn">Find A Realty</i>
+            <div class="dropdown-content" id="findsub">
+              <a href="search.html">Search</a>
+              <a href="house.html">House</a>
+              <a href="apartment.html">Apartment</a>
+              <a href="townhouse.html">Townhouse</a>
+            </div>
+          </div> 
+          <a class="nav-main" href="contactUs.html">Contact Us</a>
       </div>
     </section>
     <div id="banner">
