Loretta finish all pages

--- a/v1.0 - 1/aboutCompany.html
+++ b/v1.0 - 1/aboutCompany.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  
+
   <head>
-    <title>About Us</title>
+    <title>About Company</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet" >
     <link href="css/main.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
     <link href="css/font.css" rel="stylesheet">
-    
-    
+
+
   </head>
 
   <body>
@@ -28,13 +28,36 @@
     </section>
     <section>
       <div>
-           <a class="nav-main" href="home.html">Home</a>
-          <a class="nav-main" href="aboutUs.html">About Us</a>
+          <a class="nav-main" href="home.html">Home</a>
+          <div class="nav-main2" id="about">
+            <i class="dropbtn">About Us</i>
+            <div class="dropdown-content" id="aboutsub">
+              <a href="aboutCompany.html">About Company</a>
+              <a href="officialStatement.html">Official Statement</a>
+            </div>
+          </div>
           <a class="nav-main" href="salesTeam.html">Sales Team</a>
-          <a class="nav-main" href="findARealty.html">Find A Realty</a>
+          <div class="nav-main2" id="find">
+            <i class="dropbtn">Find A Realty</i>
+            <div class="dropdown-content" id="findsub">
+              <a href="search.html">Search</a>
+              <a href="house.html">House</a>
+              <a href="apartment.html">Apartment</a>
+              <a href="townhouse.html">Townhouse</a>
+            </div>
+          </div>
           <a class="nav-main" href="contactUs.html">Contact Us</a>
       </div>
     </section>
+    <section>
+      <div class="infor">
+        <h2>
+          THIS PAGE IS FOR ABOUT COMPANY
+        </h2>
+        <p>balabalalbala</p>
+        <p>balabalalbala</p>
+      </div>
+  </section>
 
     <div class="footer">
         <div id="footer-info">
@@ -47,5 +70,10 @@
         </div>
       </div>
       <div id="cr">copyringt info</div>
-</body>
+
+
+
+
+
+  </body>
 </html>
