--- a/v1.0 - 1/salesTeam.html
+++ b/v1.0 - 1/salesTeam.html
@@ -1,1 +1,155 @@
 <!DOCTYPE html>
+<html lang="en-US">
+
+  <head>
+    <title>Sales Team</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/normalize.css" rel="stylesheet" >
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/flexbox.css" rel="stylesheet">
+    <link href="css/font.css" rel="stylesheet">
+
+
+  </head>
+
+  <body>
+    <section>
+        <a class="menuImage" href="home.html">
+          <img src="img/logo.png" alt="logo">
+          <h1>Company Name</h1>
+        </a>
+        <div id="search">
+          <form>
+            <input type="text" area="Area" class="search-box">
+            <input type="submit" value="Search" class="button">
+          </form>
+        </div>
+    </section>
+    <section>
+      <div>
+          <a class="nav-main" href="home.html">Home</a>
+          <div class="nav-main2" id="about">
+            <i class="dropbtn">About Us</i>
+            <div class="dropdown-content" id="aboutsub">
+              <a href="aboutCompany.html">About Company</a>
+              <a href="officialStatement.html">Official Statement</a>
+            </div>
+          </div>
+          <a class="nav-main" href="salesTeam.html">Sales Team</a>
+          <div class="nav-main2" id="find">
+            <i class="dropbtn">Find A Realty</i>
+            <div class="dropdown-content" id="findsub">
+              <a href="search.html">Search</a>
+              <a href="house.html">House</a>
+              <a href="apartment.html">Apartment</a>
+              <a href="townhouse.html">Townhouse</a>
+            </div>
+          </div>
+          <a class="nav-main" href="contactUs.html">Contact Us</a>
+      </div>
+    </section>
+
+    <section>
+    <div id="topsales">
+      <h2>Our Sales Team</h2>
+      <div class="box">
+        <div id="sales1">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales2">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales3">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+        <div id="sales1">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales2">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales3">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+        <div id="sales1">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales2">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales3">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+        <div id="sales1">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+        <div id="sales2">
+          <figure>
+            <img src="img/sales.jpg" alt="sales">
+            <figcaption>Sales Name</figcaption>
+          </figure>
+        </div>
+
+
+
+      </div>
+
+      </section>
+
+
+     <div class="footer">
+        <div id="footer-info">
+         <h4>Company Information</h4>
+         <p>balabalalbala</p>
+         <p>balabalalbala</p>
+        </div>
+        <div id="qr" >
+         <img src="img/logo.png" alt="qrcode">
+        </div>
+      </div>
+      <div id="cr">copyringt info</div>
+
+
+
+
+
+  </body>
+</html>
