--- a/v1.0 - 1/search.html
+++ b/v1.0 - 1/search.html
@@ -1,1 +1,111 @@
 <!DOCTYPE html>
+<html lang="en-US">
+
+  <head>
+    <title>Contact Us</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/normalize.css" rel="stylesheet" >
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/flexbox.css" rel="stylesheet">
+    <link href="css/font.css" rel="stylesheet">
+
+
+  </head>
+
+  <body>
+    <section>
+        <a class="menuImage" href="home.html">
+          <img src="img/logo.png" alt="logo">
+          <h1>Company Name</h1>
+        </a>
+        <div id="search">
+          <form>
+            <input type="text" area="Area" class="search-box">
+            <input type="submit" value="Search" class="button">
+          </form>
+        </div>
+    </section>
+    <section>
+      <div>
+          <a class="nav-main" href="home.html">Home</a>
+          <div class="nav-main2" id="about">
+            <i class="dropbtn">About Us</i>
+            <div class="dropdown-content" id="aboutsub">
+              <a href="aboutCompany.html">About Company</a>
+              <a href="officialStatement.html">Official Statement</a>
+            </div>
+          </div>
+          <a class="nav-main" href="salesTeam.html">Sales Team</a>
+          <div class="nav-main2" id="find">
+            <i class="dropbtn">Find A Realty</i>
+            <div class="dropdown-content" id="findsub">
+              <a href="search.html">Search</a>
+              <a href="house.html">House</a>
+              <a href="apartment.html">Apartment</a>
+              <a href="townhouse.html">Townhouse</a>
+            </div>
+          </div>
+          <a class="nav-main" href="contactUs.html">Contact Us</a>
+      </div>
+    </section>
+    <section>
+
+      <h2>Search</h2>
+<div id="filter">
+      <select >
+  		<option value="area">Area</option>
+  		<option value="Richmond">Richmond</option>
+  		<option value="Burnaby">Burnaby</option>
+  		<option value="Vancouver">Vancouver</option>
+  		<option value="Surrey">Surrey</option>
+	</select>
+
+	<select >
+  		<option value="type">Type</option>
+  		<option value="Apartment">Apartment</option>
+  		<option value="House">House</option>
+  		<option value="Townhouse">Townhouse</option>
+	</select>
+
+	<select >
+  		<option value="bth">Bathroom</option>
+  		<option value="bth1">1</option>
+  		<option value="bth2">2</option>
+  		<option value="bth3">3</option>
+
+	</select>
+
+	<select >
+  		<option value="br">Bedroom</option>
+  		<option value="1">1</option>
+  		<option value="2">2</option>
+  		<option value="3">3</option>
+  		<option value="4">4</option>
+  		<option value="5">5</option>
+  		<option value="6">6</option>
+	</select>
+
+	<input type="submit" value="Search" class="button">
+      </div>
+      </section>
+
+
+     <div class="footer">
+        <div id="footer-info">
+         <h4>Company Information</h4>
+         <p>balabalalbala</p>
+         <p>balabalalbala</p>
+        </div>
+        <div id="qr" >
+         <img src="img/logo.png" alt="qrcode">
+        </div>
+      </div>
+      <div id="cr">copyringt info</div>
+
+
+
+
+
+  </body>
+</html>
