--- a/v1.0 - 1/surrey.html
+++ b/v1.0 - 1/surrey.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
   <head>
-    <title>Search</title>
+    <title>Contact Us - Surrey</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet" >
@@ -51,33 +51,22 @@
     </section>
     <section>
 
-      <h2>Search</h2>
-      <div id="selecter-group">
-		<div id="selecter">
-			<input type="checkbox" id="switch0" /><label for="switch0" id="label1">House</label>
-			<input type="checkbox" id="switch1" /><label for="switch1" id="label2">Richmond</label>
-			<input type="checkbox" id="switch2" /><label for="switch2" id="label2">Burnaby</label>
-			<input type="checkbox" id="switch3" /><label for="switch3" id="label2">Vancouver</label>
-			<input type="checkbox" id="switch4" /><label for="switch4" id="label2">Surrey</label>
-		</div>
-		<div id="selecter">
-			<input type="checkbox" id="switch01" /><label for="switch01" id="label1">Apartment</label>
-			<input type="checkbox" id="switch11" /><label for="switch11" id="label2">Richmond</label>
-			<input type="checkbox" id="switch21" /><label for="switch21" id="label2">Burnaby</label>
-			<input type="checkbox" id="switch31" /><label for="switch31" id="label2">Vancouver</label>
-			<input type="checkbox" id="switch41" /><label for="switch41" id="label2">Surrey</label>
-		</div>
-		<div id="selecter">
-			<input type="checkbox" id="switch02" /><label for="switch02" id="label1">Townhouse</label>
-			<input type="checkbox" id="switch12" /><label for="switch12" id="label2">Richmond</label>
-			<input type="checkbox" id="switch22" /><label for="switch22" id="label2">Burnaby</label>
-			<input type="checkbox" id="switch32" /><label for="switch32" id="label2">Vancouver</label>
-			<input type="checkbox" id="switch42" /><label for="switch42" id="label2">Surrey</label>
-		</div>
-  </div>
+      <h2 class="infor">Contact Us</h2>
 
-      </section>
 
+     <div >
+      <div id="location">
+         <img src="img/map.png" alt="map">
+        </div>
+        <div class="infor" id="location">
+         <h4>Surrey Information</h4>
+         <p>balabalalbala</p>
+         <p>balabalalbala</p>
+        </div>
+
+      </div>
+
+    </section>
 
      <div class="footer">
         <div id="footer-info">
@@ -92,5 +81,8 @@
       <div id="cr">copyringt info</div>
 
 
+
+
+
   </body>
-</html><!DOCTYPE html>
+</html>
