add detail pages, change some style

--- a/v1.0 - 1/detail.html
+++ b/v1.0 - 1/detail.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
   <head>
-    <title>Contact Us - Vancouver</title>
+    <title>123 No.3 Road</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet" >
@@ -48,25 +48,62 @@
           <a class="nav-main" href="contactUs.html">Contact Us</a>
       </div>
     <section>
-
-      <h2 class="infor">Contact Us</h2>
-
-
-     <div >
-      <div id="location">
-         <img src="img/map.png" alt="map">
+      <div class="detail-slide-show">
+        <div class="largeview">
+          <img src="img/listing.png">
         </div>
-        <div class="infor" id="location">
-         <h4>vancouver Information</h4>
-         <p>balabalalbala</p>
-         <p>balabalalbala</p>
-        </div>
+
+ <div class="smallview">
+
+    <img src="img/listing.png">
+    <img src="img/map.png">
+    <img src="img/map.png">
+    <img src="img/listing.png">
+    <img src="img/map.png">
+    <img src="img/map.png">
+</div>
 
       </div>
+      <div id="detail-info-group">
+      <div id="detail-info">
 
+          <div id="line">
+            <h4>Price: </h4><p>$999,999</p>
+          </div>
+          <div id="line">
+            <h4>Area: </h4><p>Richmond</p>
+          </div>
+          <div id="line">
+            <h4>Address: </h4><p>123 No. 3 Road</p>
+          </div>
+        </div>
+        <div id="detail-info">
+
+          <div id="line">
+            <h4>Bedroom: </h4><p>3</p>
+          </div>
+          <div id="line">
+            <h4>Bathroom: </h4><p>2</p>
+          </div>
+          <div id="line">
+            <h4>Year: </h4><p>2018</p>
+          </div>
+        </div>
+        </div>
+        <div id="detail-button">
+          <a href="contactUs.html" class="button-nav" >Contact Us</a>
+        </div>
+
+      <div id="detail-des">
+        <h4>Description</h4>
+
+        <p>
+          balabalabala
+        </p>
+      </div>
     </section>
 
-     <div class="footer">
+    <div class="footer">
         <div id="footer-info">
          <h4>Company Information</h4>
          <p>balabalalbala</p>
@@ -77,9 +114,6 @@
         </div>
       </div>
       <div id="cr">copyringt info</div>
-
-
-
 
 
   </body>
