--- a/v1.0 - 1/house.html
+++ b/v1.0 - 1/house.html
@@ -14,10 +14,10 @@
   </head>
 
   <body>
-    <section>
+    <section id="top">
         <a class="menuImage" href="home.html">
           <img src="img/logo.png" alt="logo">
-          <h1>Company Name</h1>
+          <h1>Sunrise Realty</h1>
         </a>
         <div id="search">
           <form>
@@ -26,10 +26,9 @@
           </form>
         </div>
     </section>
-    <section>
-      <div>
+      <div id="main-nav">
           <a class="nav-main" href="home.html">Home</a>
-          <div class="nav-main2" id="about">
+          <div class="nav-main" id="about">
             <i class="dropbtn">About Us</i>
             <div class="dropdown-content" id="aboutsub">
               <a href="aboutCompany.html">About Company</a>
@@ -37,8 +36,8 @@
             </div>
           </div>
           <a class="nav-main" href="salesTeam.html">Sales Team</a>
-          <div class="nav-main2" id="find">
-            <i class="dropbtn">Find A Realty</i>
+          <div class="nav-main" id="find">
+            <i class="dropbtn">Find Realty</i>
             <div class="dropdown-content" id="findsub">
               <a href="search.html">Search</a>
               <a href="house.html">House</a>
@@ -48,7 +47,6 @@
           </div>
           <a class="nav-main" href="contactUs.html">Contact Us</a>
       </div>
-    </section>
     <section>
 
       <h2>Search</h2>
@@ -76,6 +74,193 @@
 		</div>
   </div>
 
+    <div id="pagenum">
+      <a href="#">Pre</a>
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">4</a>
+      <a href="#">5</a>
+      <a href="#">6</a>
+      <a href="#">Next</a>
+    </div>
+
+    <div id="property-list">
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <div id="line">
+            <h4>Price: </h4><p>$999,999</p>
+          </div>
+          <div id="line">
+            <h4>Area: </h4><p>Richmond</p>
+          </div>
+          <div id="line">
+            <h4>Address: </h4><p>123 No. 3 Road</p>
+          </div>
+        </div>
+        <div id="card-infor">
+          <div id="line">
+            <h4>Bedroom: </h4><p>3</p>
+          </div>
+          <div id="line">
+            <h4>Bathroom: </h4><p>2</p>
+          </div>
+          <div id="line">
+            <h4>Year: </h4><p>2018</p>
+          </div>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >View Detail</a>
+      </div>
+
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <div id="line">
+            <h4>Price: </h4><p>$999,999</p>
+          </div>
+          <div id="line">
+            <h4>Area: </h4><p>Richmond</p>
+          </div>
+          <div id="line">
+            <h4>Address: </h4><p>123 No. 3 Road</p>
+          </div>
+        </div>
+        <div id="card-infor">
+          <div id="line">
+            <h4>Bedroom: </h4><p>3</p>
+          </div>
+          <div id="line">
+            <h4>Bathroom: </h4><p>2</p>
+          </div>
+          <div id="line">
+            <h4>Year: </h4><p>2018</p>
+          </div>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >View Detail</a>
+      </div>
+
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <div id="line">
+            <h4>Price: </h4><p>$999,999</p>
+          </div>
+          <div id="line">
+            <h4>Area: </h4><p>Richmond</p>
+          </div>
+          <div id="line">
+            <h4>Address: </h4><p>123 No. 3 Road</p>
+          </div>
+        </div>
+        <div id="card-infor">
+          <div id="line">
+            <h4>Bedroom: </h4><p>3</p>
+          </div>
+          <div id="line">
+            <h4>Bathroom: </h4><p>2</p>
+          </div>
+          <div id="line">
+            <h4>Year: </h4><p>2018</p>
+          </div>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >View Detail</a>
+      </div>
+
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <div id="line">
+            <h4>Price: </h4><p>$999,999</p>
+          </div>
+          <div id="line">
+            <h4>Area: </h4><p>Richmond</p>
+          </div>
+          <div id="line">
+            <h4>Address: </h4><p>123 No. 3 Road</p>
+          </div>
+        </div>
+        <div id="card-infor">
+          <div id="line">
+            <h4>Bedroom: </h4><p>3</p>
+          </div>
+          <div id="line">
+            <h4>Bathroom: </h4><p>2</p>
+          </div>
+          <div id="line">
+            <h4>Year: </h4><p>2018</p>
+          </div>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >View Detail</a>
+      </div>
+
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <div id="line">
+            <h4>Price: </h4><p>$999,999</p>
+          </div>
+          <div id="line">
+            <h4>Area: </h4><p>Richmond</p>
+          </div>
+          <div id="line">
+            <h4>Address: </h4><p>123 No. 3 Road</p>
+          </div>
+        </div>
+        <div id="card-infor">
+          <div id="line">
+            <h4>Bedroom: </h4><p>3</p>
+          </div>
+          <div id="line">
+            <h4>Bathroom: </h4><p>2</p>
+          </div>
+          <div id="line">
+            <h4>Year: </h4><p>2018</p>
+          </div>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >View Detail</a>
+      </div>
+
+      <div class="property-card">
+        <img id="card-img" src="img/listing.png" alt="property image">
+        <div id="card-infor">
+          <div id="line">
+            <h4>Price: </h4><p>$999,999</p>
+          </div>
+          <div id="line">
+            <h4>Area: </h4><p>Richmond</p>
+          </div>
+          <div id="line">
+            <h4>Address: </h4><p>123 No. 3 Road</p>
+          </div>
+        </div>
+        <div id="card-infor">
+          <div id="line">
+            <h4>Bedroom: </h4><p>3</p>
+          </div>
+          <div id="line">
+            <h4>Bathroom: </h4><p>2</p>
+          </div>
+          <div id="line">
+            <h4>Year: </h4><p>2018</p>
+          </div>
+        </div>
+        <a id="card-button" href="detail.html" class="button-nav" >View Detail</a>
+      </div>
+
+    </div>
+
+    <div id="pagenum">
+      <a href="#">Pre</a>
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">4</a>
+      <a href="#">5</a>
+      <a href="#">6</a>
+      <a href="#">Next</a>
+    </div>
+
       </section>
 
 
@@ -93,4 +278,4 @@
 
 
   </body>
-</html><!DOCTYPE html>
+</html>
