--- a/v1.0 - 1/officialStatement.html
+++ b/v1.0 - 1/officialStatement.html
@@ -14,10 +14,10 @@
   </head>
 
   <body>
-    <section>
+    <section id="top">
         <a class="menuImage" href="home.html">
           <img src="img/logo.png" alt="logo">
-          <h1>Company Name</h1>
+          <h1>Sunrise Realty</h1>
         </a>
         <div id="search">
           <form>
@@ -26,10 +26,9 @@
           </form>
         </div>
     </section>
-    <section>
-      <div>
+      <div id="main-nav">
           <a class="nav-main" href="home.html">Home</a>
-          <div class="nav-main2" id="about">
+          <div class="nav-main" id="about">
             <i class="dropbtn">About Us</i>
             <div class="dropdown-content" id="aboutsub">
               <a href="aboutCompany.html">About Company</a>
@@ -37,8 +36,8 @@
             </div>
           </div>
           <a class="nav-main" href="salesTeam.html">Sales Team</a>
-          <div class="nav-main2" id="find">
-            <i class="dropbtn">Find A Realty</i>
+          <div class="nav-main" id="find">
+            <i class="dropbtn">Find Realty</i>
             <div class="dropdown-content" id="findsub">
               <a href="search.html">Search</a>
               <a href="house.html">House</a>
@@ -48,7 +47,6 @@
           </div>
           <a class="nav-main" href="contactUs.html">Contact Us</a>
       </div>
-    </section>
     <section>
 	    <div class="infor">
 		    <h2>
