--- a/v1.0 - 1/house.html
+++ b/v1.0 - 1/house.html
@@ -49,28 +49,28 @@
       </div>
     <section>
 
-      <h2>Search</h2>
+      <h2 class="infor">Search</h2>
       <div id="selecter-group">
 		<div id="selecter">
-			<input type="checkbox" id="switch0" /><label for="switch0" id="label1">House</label>
-			<input type="checkbox" id="switch1" /><label for="switch1" id="label2">Richmond</label>
-			<input type="checkbox" id="switch2" /><label for="switch2" id="label2">Burnaby</label>
-			<input type="checkbox" id="switch3" /><label for="switch3" id="label2">Vancouver</label>
-			<input type="checkbox" id="switch4" /><label for="switch4" id="label2">Surrey</label>
+			<input type="radio" name="area-radio" id="switch0" checked /><label for="switch0" id="label1">House</label>
+			<input type="radio" name="area-radio1" id="switch1" /><label for="switch1" id="label2">Richmond</label>
+			<input type="radio" name="area-radio1" id="switch2" /><label for="switch2" id="label2">Burnaby</label>
+			<input type="radio" name="area-radio1" id="switch3" /><label for="switch3" id="label2">Vancouver</label>
+			<input type="radio" name="area-radio1" id="switch4" /><label for="switch4" id="label2">Surrey</label>
 		</div>
 		<div id="selecter">
-			<input type="checkbox" id="switch01" /><label for="switch01" id="label1">Apartment</label>
-			<input type="checkbox" id="switch11" /><label for="switch11" id="label2">Richmond</label>
-			<input type="checkbox" id="switch21" /><label for="switch21" id="label2">Burnaby</label>
-			<input type="checkbox" id="switch31" /><label for="switch31" id="label2">Vancouver</label>
-			<input type="checkbox" id="switch41" /><label for="switch41" id="label2">Surrey</label>
+			<input type="radio" name="area-radio" id="switch01" /><label for="switch01" id="label1">Apartment</label>
+			<input type="radio" name="area-radio2" id="switch11" /><label for="switch11" id="label2">Richmond</label>
+			<input type="radio" name="area-radio2" id="switch21" /><label for="switch21" id="label2">Burnaby</label>
+			<input type="radio" name="area-radio2" id="switch31" /><label for="switch31" id="label2">Vancouver</label>
+			<input type="radio" name="area-radio2" id="switch41" /><label for="switch41" id="label2">Surrey</label>
 		</div>
 		<div id="selecter">
-			<input type="checkbox" id="switch02" /><label for="switch02" id="label1">Townhouse</label>
-			<input type="checkbox" id="switch12" /><label for="switch12" id="label2">Richmond</label>
-			<input type="checkbox" id="switch22" /><label for="switch22" id="label2">Burnaby</label>
-			<input type="checkbox" id="switch32" /><label for="switch32" id="label2">Vancouver</label>
-			<input type="checkbox" id="switch42" /><label for="switch42" id="label2">Surrey</label>
+			<input type="radio" name="area-radio" id="switch02" /><label for="switch02" id="label1">Townhouse</label>
+			<input type="radio" name="area-radio3" id="switch12" /><label for="switch12" id="label2">Richmond</label>
+			<input type="radio" name="area-radio3" id="switch22" /><label for="switch22" id="label2">Burnaby</label>
+			<input type="radio" name="area-radio3" id="switch32" /><label for="switch32" id="label2">Vancouver</label>
+			<input type="radio" name="area-radio3" id="switch42" /><label for="switch42" id="label2">Surrey</label>
 		</div>
   </div>
 
