change the footer and logo

--- a/v1.0 - 1/search.html
+++ b/v1.0 - 1/search.html
@@ -89,15 +89,15 @@
       </section>
 
 
-     <div class="footer">
-        <div id="footer-info">
-         <h4>Company Information</h4>
-         <p>balabalalbala</p>
-         <p>balabalalbala</p>
-        </div>
-        <div id="qr" >
-         <img src="img/logo.png" alt="qrcode">
-        </div>
+      <div class="footer">
+          <div id="footer-info">
+              <h4>Company Information</h4>
+              <p>TEL: 604-000-0000</p> </br>
+              <p>info@sunriserealty.ca</p>
+          </div>
+          <div id="qr" >
+              <img src="img/QRcode.jpeg" alt="qrcode">
+          </div>
       </div>
       <div id="cr">copyringt info</div>
 
