--- a/v1.0 - 1/footer.html
+++ b/v1.0 - 1/footer.html
@@ -1,11 +1,11 @@
 <div class="footer">
     <div id="footer-info">
         <h4>Company Information</h4>
-        <p>balabalalbala</p>
-        <p>balabalalbala</p>
+        <p>TEL: 604-000-0000</p>
+        <p>info@sunriserealty.ca</p>
     </div>
     <div id="qr" >
-        <img src="img/logo.png" alt="qrcode">
+        <img src="img/QRcode.jpeg" alt="qrcode">
     </div>
 </div>
 <div id="cr">copyringt info</div>
