--- a/v1.0 - 1/home.html
+++ b/v1.0 - 1/home.html
@@ -127,17 +127,17 @@
       </div>
     </section>
 
-     <div class="footer">
+    <div class="footer">
         <div id="footer-info">
-         <h4>Company Information</h4>
-         <p>balabalalbala</p>
-         <p>balabalalbala</p>
+            <h4>Company Information</h4>
+            <p>TEL: 604-000-0000</p> </br>
+            <p>info@sunriserealty.ca</p>
         </div>
         <div id="qr" >
-         <img src="img/logo.png" alt="qrcode">
+            <img src="img/QRcode.jpeg" alt="qrcode">
         </div>
-      </div>
-      <div id="cr">copyringt info</div>
+    </div>
+    <div id="cr">copyringt info</div>
 
 
 
